Enhance build process for web applications
- Added Bun installation step in the GitHub Actions workflow for the tunnel-client.
- Refactored build.rs to support building multiple web applications by parameterizing the webapp name.
- Improved error messages and logging for Bun installation and build processes.
- Updated paths to ensure correct handling of webapp directories.

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -99,6 +99,12 @@ jobs:
           name: webapps
           path: webapps/
 
+      # Install Bun (required by tunnel-client build.rs)
+      - name: Install Bun
+        uses: oven-sh/setup-bun@v2
+        with:
+          bun-version: latest
+
       - name: Install Rust toolchain
         uses: dtolnay/rust-toolchain@stable
         with:
