Update project files for consistency and improvements
- Updated .gitignore to include .vscode directory.
- Modified .pre-commit-config.yaml to replace Rust formatting and linting tool from prek to doublify/pre-commit-rust.
- Cleaned up comments in CLAUDE.md for better readability.
- Ensured consistent formatting in stream.rs documentation.
- Updated SVG assets in multiple web applications to ensure they end with a newline.
- Ensured index.css imports tailwindcss correctly with a newline at the end.

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -18,14 +18,14 @@ repos:
       - id: conventional-pre-commit
         stages: [commit-msg]
 
-  # Rust formatting and linting with prek
-  - repo: https://github.com/KOBA789/prek
-    rev: v0.2.1
+  # Rust formatting and linting
+  - repo: https://github.com/doublify/pre-commit-rust
+    rev: v1.0
     hooks:
-      - id: cargo-fmt
+      - id: fmt
         name: cargo fmt
         args: ["--", "--check"]
 
-      - id: cargo-clippy
+      - id: clippy
         name: cargo clippy
         args: ["--all-targets", "--all-features", "--", "-D", "warnings"]
