--- a/crates/tunnel-cli/Cargo.toml
+++ b/crates/tunnel-cli/Cargo.toml
@@ -18,6 +18,7 @@ clap = { workspace = true }
 tracing = { workspace = true }
 tracing-subscriber = { workspace = true }
 anyhow = { workspace = true }
+rustls = { workspace = true }
 
 [dev-dependencies]
 tokio = { workspace = true, features = ["test-util"] }
