--- a/crates/tunnel-exit-node/Cargo.toml
+++ b/crates/tunnel-exit-node/Cargo.toml
@@ -28,5 +28,6 @@ tracing-subscriber = { workspace = true }
 anyhow = { workspace = true }
 clap = { workspace = true }
 chrono = { workspace = true }
+rustls = { workspace = true }
 rust-embed = "8.5.0"
 mime_guess = "2.0"
