Rename tunnel and tunnel-exit-node to localup and localup-relay in release workflow and installation scripts
- Updated the GitHub Actions workflow to build and package the new localup and localup-relay binaries.
- Modified installation scripts to reflect the new binary names and updated installation instructions accordingly.
- Ensured consistency across all platforms for the new CLI commands and packaging formats.

--- a/crates/tunnel-cli/Cargo.toml
+++ b/crates/tunnel-cli/Cargo.toml
@@ -6,7 +6,7 @@ license.workspace = true
 authors.workspace = true
 
 [[bin]]
-name = "tunnel"
+name = "localup"
 path = "src/main.rs"
 
 [dependencies]
