--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -150,22 +150,22 @@ jobs:
           CC_aarch64_unknown_linux_gnu: aarch64-linux-gnu-gcc
           AR_aarch64_unknown_linux_gnu: aarch64-linux-gnu-ar
         run: |
-          cargo build --release --target ${{ matrix.target }} --bin tunnel
-          cargo build --release --target ${{ matrix.target }} --bin tunnel-exit-node
+          cargo build --release --target ${{ matrix.target }} --bin localup
+          cargo build --release --target ${{ matrix.target }} --bin localup-relay
 
       # Build normally for other platforms
       - name: Build binaries
         if: matrix.cross != true
         run: |
-          cargo build --release --target ${{ matrix.target }} --bin tunnel
-          cargo build --release --target ${{ matrix.target }} --bin tunnel-exit-node
+          cargo build --release --target ${{ matrix.target }} --bin localup
+          cargo build --release --target ${{ matrix.target }} --bin localup-relay
 
       # Strip binaries (Unix only)
       - name: Strip binaries (Unix)
         if: runner.os != 'Windows'
         run: |
-          ${{ matrix.strip }} target/${{ matrix.target }}/release/tunnel
-          ${{ matrix.strip }} target/${{ matrix.target }}/release/tunnel-exit-node
+          ${{ matrix.strip }} target/${{ matrix.target }}/release/localup
+          ${{ matrix.strip }} target/${{ matrix.target }}/release/localup-relay
 
       # Create archives (Unix - tar.gz)
       - name: Create release archives (Unix)
@@ -173,13 +173,13 @@ jobs:
         run: |
           mkdir -p release
 
-          # Package tunnel CLI
-          tar -czf release/tunnel-${{ matrix.archive_name }}.tar.gz \
-            -C target/${{ matrix.target }}/release tunnel
+          # Package localup CLI
+          tar -czf release/localup-${{ matrix.archive_name }}.tar.gz \
+            -C target/${{ matrix.target }}/release localup
 
-          # Package tunnel-exit-node
-          tar -czf release/tunnel-exit-node-${{ matrix.archive_name }}.tar.gz \
-            -C target/${{ matrix.target }}/release tunnel-exit-node
+          # Package localup-relay
+          tar -czf release/localup-relay-${{ matrix.archive_name }}.tar.gz \
+            -C target/${{ matrix.target }}/release localup-relay
 
           # Create checksums
           cd release
@@ -192,13 +192,13 @@ jobs:
         run: |
           New-Item -ItemType Directory -Force -Path release
 
-          # Package tunnel CLI
-          Compress-Archive -Path target/${{ matrix.target }}/release/tunnel.exe `
-            -DestinationPath release/tunnel-${{ matrix.archive_name }}.zip
+          # Package localup CLI
+          Compress-Archive -Path target/${{ matrix.target }}/release/localup.exe `
+            -DestinationPath release/localup-${{ matrix.archive_name }}.zip
 
-          # Package tunnel-exit-node
-          Compress-Archive -Path target/${{ matrix.target }}/release/tunnel-exit-node.exe `
-            -DestinationPath release/tunnel-exit-node-${{ matrix.archive_name }}.zip
+          # Package localup-relay
+          Compress-Archive -Path target/${{ matrix.target }}/release/localup-relay.exe `
+            -DestinationPath release/localup-relay-${{ matrix.archive_name }}.zip
 
           # Create checksums
           cd release
@@ -287,15 +287,15 @@ jobs:
             Download the appropriate binary for your platform:
 
             ### Linux
-            - **AMD64**: `tunnel-linux-amd64.tar.gz`, `tunnel-exit-node-linux-amd64.tar.gz`
-            - **ARM64**: `tunnel-linux-arm64.tar.gz`, `tunnel-exit-node-linux-arm64.tar.gz`
+            - **AMD64**: `localup-linux-amd64.tar.gz`, `localup-relay-linux-amd64.tar.gz`
+            - **ARM64**: `localup-linux-arm64.tar.gz`, `localup-relay-linux-arm64.tar.gz`
 
             ### macOS
-            - **Intel (AMD64)**: `tunnel-macos-amd64.tar.gz`, `tunnel-exit-node-macos-amd64.tar.gz`
-            - **Apple Silicon (ARM64)**: `tunnel-macos-arm64.tar.gz`, `tunnel-exit-node-macos-arm64.tar.gz`
+            - **Intel (AMD64)**: `localup-macos-amd64.tar.gz`, `localup-relay-macos-amd64.tar.gz`
+            - **Apple Silicon (ARM64)**: `localup-macos-arm64.tar.gz`, `localup-relay-macos-arm64.tar.gz`
 
             ### Windows
-            - **AMD64**: `tunnel-windows-amd64.zip`, `tunnel-exit-node-windows-amd64.zip`
+            - **AMD64**: `localup-windows-amd64.zip`, `localup-relay-windows-amd64.zip`
 
             ### Verify Downloads
 
@@ -314,14 +314,16 @@ jobs:
 
             **Unix (Linux/macOS)**:
             ```bash
-            tar -xzf tunnel-<platform>-<arch>.tar.gz
-            sudo mv tunnel /usr/local/bin/
-            chmod +x /usr/local/bin/tunnel
+            tar -xzf localup-<platform>-<arch>.tar.gz
+            tar -xzf localup-relay-<platform>-<arch>.tar.gz
+            sudo mv localup localup-relay /usr/local/bin/
+            chmod +x /usr/local/bin/localup /usr/local/bin/localup-relay
             ```
 
             **Windows**:
             ```powershell
-            Expand-Archive tunnel-windows-amd64.zip -DestinationPath .
+            Expand-Archive localup-windows-amd64.zip -DestinationPath .
+            Expand-Archive localup-relay-windows-amd64.zip -DestinationPath .
             # Add to PATH or move to desired location
             ```
           files: |
