Update tunnel-cli and tunnel-exit-node to localup and localup-relay, and add build scripts for versioning
- Renamed the CLI commands from tunnel and tunnel-exit-node to localup and localup-relay for consistency.
- Updated installation scripts and documentation to reflect the new binary names across all platforms.
- Introduced build scripts to capture git commit hash, tag, and build timestamp for better versioning in the binaries.
- Added chrono as a build dependency to facilitate timestamp generation.

--- a/crates/tunnel-cli/Cargo.toml
+++ b/crates/tunnel-cli/Cargo.toml
@@ -20,5 +20,8 @@ tracing-subscriber = { workspace = true }
 anyhow = { workspace = true }
 rustls = { workspace = true }
 
+[build-dependencies]
+chrono = { workspace = true }
+
 [dev-dependencies]
 tokio = { workspace = true, features = ["test-util"] }
