--- a/crates/tunnel-exit-node/Cargo.toml
+++ b/crates/tunnel-exit-node/Cargo.toml
@@ -31,3 +31,6 @@ chrono = { workspace = true }
 rustls = { workspace = true }
 rust-embed = "8.5.0"
 mime_guess = "2.0"
+
+[build-dependencies]
+chrono = { workspace = true }
