Update dependencies and add integration tests for transparent streaming
- Updated `tokio-tungstenite` to version 0.28.0 and added new dependencies including `system-configuration` and `windows-registry`.
- Introduced integration tests for transparent HTTP/HTTPS streaming, WebSocket, and long-lived connections in `transparent_streaming_test.rs`.
- Added end-to-end tests for transparent streaming through the tunnel in `transparent_tunnel_test.rs`, covering HTTP and WebSocket scenarios.
- Enhanced `Cargo.toml` for the `tunnel-client` crate with new development dependencies to support testing.

--- a/crates/tunnel-client/Cargo.toml
+++ b/crates/tunnel-client/Cargo.toml
@@ -61,3 +61,11 @@ db-metrics = ["tunnel-relay-db", "sea-orm"]
 
 [dev-dependencies]
 tokio = { workspace = true, features = ["test-util"] }
+tokio-tungstenite = "0.21"
+futures-util = "0.3"
+tracing-subscriber = "0.3"
+rustls = { workspace = true }
+tokio-rustls = "0.26"
+rcgen = "0.12"
+hyper = { workspace = true }
+hyper-util = { workspace = true }
