Enhance .gitignore and update Cargo.lock for new dependencies
- Added custom relay configuration files to .gitignore to prevent accidental inclusion in version control.
- Updated Cargo.lock to include new versions of dependencies, specifically `dirs`, `redox_users`, and `serde_yaml`, ensuring compatibility and improved functionality.
- Introduced new modules in the tunnel-cli crate for daemon management and service installation, enhancing the overall architecture and usability of the application.

--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,9 @@
 *.db
 node_modules
 .vscode
+
+# Custom relay configurations (keep private)
+relays-*.yaml
+*-relays.yaml
+my-relays.yaml
+custom-relays.yaml
