--- a/crates/tunnel-cli/Cargo.toml
+++ b/crates/tunnel-cli/Cargo.toml
@@ -19,9 +19,13 @@ tracing = { workspace = true }
 tracing-subscriber = { workspace = true }
 anyhow = { workspace = true }
 rustls = { workspace = true }
+serde = { workspace = true }
+serde_json = { workspace = true }
+dirs = "5.0"
 
 [build-dependencies]
 chrono = { workspace = true }
 
 [dev-dependencies]
 tokio = { workspace = true, features = ["test-util"] }
+tempfile = "3.13"
