Add custom relay configuration documentation and update .gitignore
- Introduced a new `BUILD-CUSTOM.md` file detailing the process for building LocalUp with custom relay configurations, including quick start instructions and examples.
- Updated `.gitignore` to include additional files related to private keys and local examples to prevent accidental inclusion in version control.
- Enhanced `Cargo.toml` and `Cargo.lock` to reflect new dependencies and modules for improved functionality.
- Added new relay configuration files (`relays.example.yaml`, `relays.yaml`) to provide users with templates for custom setups.
- Created `DAEMON_IMPLEMENTATION_SUMMARY.md` and `RELAY-USAGE.md` for comprehensive documentation on daemon mode and relay usage.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -19,6 +19,7 @@ members = [
     "crates/tunnel-transport",
     "crates/tunnel-transport-quic",
     "tauri-tunnel-app/src-tauri",  # Tauri desktop application
+    "localup-saas-example",  # Example SaaS application using tunnel-lib
 ]
 
 resolver = "2"
