Implement reverse tunnel feature with agent registration and client connectivity
- Added a new `localup-agent` crate to facilitate reverse tunnel connections, allowing clients to access services behind NAT/firewalls.
- Updated `Cargo.toml` and `Cargo.lock` to include new dependencies such as `hostname` and `ipnetwork`, enhancing functionality.
- Introduced new protocol messages for agent registration and reverse tunnel requests in `tunnel-proto`.
- Created comprehensive documentation for reverse tunnel usage and configuration, including a user guide and implementation status.
- Enhanced the `tunnel-client` to support reverse tunnel connections, enabling clients to connect to remote services through registered agents.
- Implemented agent registry management in the control plane to track connected agents and their capabilities.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,9 +18,33 @@ members = [
     "crates/tunnel-relay-db",
     "crates/tunnel-transport",
     "crates/tunnel-transport-quic",
+    "crates/tunnel-agent",
+    "crates/localup-agent-server",
+    # "crates/localup-agent",
 ]
 
 resolver = "2"
+
+[package]
+name = "localup"
+version.workspace = true
+edition.workspace = true
+license.workspace = true
+authors.workspace = true
+
+[[bin]]
+name = "localup"
+path = "src/main.rs"
+
+
+[dependencies]
+tunnel-agent = { path = "crates/tunnel-agent" }
+tokio = { workspace = true }
+clap = { workspace = true }
+anyhow = { workspace = true }
+tracing = { workspace = true }
+tracing-subscriber = { workspace = true }
+uuid = { workspace = true }
 
 [workspace.package]
 version = "0.1.0"
