--- a/crates/tunnel-control/Cargo.toml
+++ b/crates/tunnel-control/Cargo.toml
@@ -16,6 +16,7 @@ thiserror = { workspace = true }
 tracing = { workspace = true }
 bincode = { workspace = true }
 dashmap = "6.1"
+chrono = { workspace = true }
 
 [dev-dependencies]
 tokio = { workspace = true, features = ["full"] }
