--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -11,10 +11,9 @@ env:
   RUST_VERSION: "1.90.0" # Pin Rust version for reproducible builds
 
 jobs:
-  test:
-    name: Test Suite
+  build-webapps:
+    name: Build Web Applications
     runs-on: ubuntu-latest
-
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
@@ -36,28 +35,41 @@ jobs:
           bun install
           bun run build
 
+      - name: Upload webapp artifacts
+        uses: actions/upload-artifact@v4
+        with:
+          name: webapps-ci
+          path: |
+            webapps/dashboard/dist
+            webapps/exit-node-portal/dist
+          retention-days: 1
+
+  test:
+    name: Test Suite
+    needs: build-webapps
+    runs-on: ubuntu-latest
+
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v4
+
+      - name: Download webapp artifacts
+        uses: actions/download-artifact@v4
+        with:
+          name: webapps-ci
+          path: webapps/
+
       - name: Install Rust toolchain
         uses: dtolnay/rust-toolchain@stable
         with:
           toolchain: ${{ env.RUST_VERSION }}
 
-      - name: Cache Cargo registry
-        uses: actions/cache@v4
+      - name: Cache Rust dependencies
+        uses: Swatinem/rust-cache@v2
         with:
-          path: ~/.cargo/registry
-          key: ${{ runner.os }}-cargo-registry-${{ hashFiles('**/Cargo.lock') }}
-
-      - name: Cache Cargo index
-        uses: actions/cache@v4
-        with:
-          path: ~/.cargo/git
-          key: ${{ runner.os }}-cargo-git-${{ hashFiles('**/Cargo.lock') }}
-
-      - name: Cache target directory
-        uses: actions/cache@v4
-        with:
-          path: target
-          key: ${{ runner.os }}-target-test-${{ hashFiles('**/Cargo.lock') }}
+          shared-key: "ci"
+          cache-targets: true
+          cache-on-failure: true
 
       - name: Build workspace (all crates)
         run: cargo build --workspace --verbose
@@ -67,34 +79,31 @@ jobs:
 
   lint:
     name: Linting
+    needs: build-webapps
     runs-on: ubuntu-latest
 
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
 
-      - name: Install Bun
-        uses: oven-sh/setup-bun@v2
+      - name: Download webapp artifacts
+        uses: actions/download-artifact@v4
         with:
-          bun-version: latest
-
-      - name: Build dashboard webapp
-        run: |
-          cd webapps/dashboard
-          bun install
-          bun run build
-
-      - name: Build exit-node-portal webapp
-        run: |
-          cd webapps/exit-node-portal
-          bun install
-          bun run build
+          name: webapps-ci
+          path: webapps/
 
       - name: Install Rust toolchain
         uses: dtolnay/rust-toolchain@stable
         with:
           toolchain: ${{ env.RUST_VERSION }}
           components: rustfmt, clippy
+
+      - name: Cache Rust dependencies
+        uses: Swatinem/rust-cache@v2
+        with:
+          shared-key: "ci"
+          cache-targets: true
+          cache-on-failure: true
 
       - name: Check formatting
         run: cargo fmt --all -- --check
@@ -104,51 +113,30 @@ jobs:
 
   build:
     name: Build Check
+    needs: build-webapps
     runs-on: ubuntu-latest
 
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
 
-      - name: Install Bun
-        uses: oven-sh/setup-bun@v2
+      - name: Download webapp artifacts
+        uses: actions/download-artifact@v4
         with:
-          bun-version: latest
-
-      - name: Build dashboard webapp
-        run: |
-          cd webapps/dashboard
-          bun install
-          bun run build
-
-      - name: Build exit-node-portal webapp
-        run: |
-          cd webapps/exit-node-portal
-          bun install
-          bun run build
+          name: webapps-ci
+          path: webapps/
 
       - name: Install Rust toolchain
         uses: dtolnay/rust-toolchain@stable
         with:
           toolchain: ${{ env.RUST_VERSION }}
 
-      - name: Cache Cargo registry
-        uses: actions/cache@v4
+      - name: Cache Rust dependencies
+        uses: Swatinem/rust-cache@v2
         with:
-          path: ~/.cargo/registry
-          key: ${{ runner.os }}-cargo-registry-${{ hashFiles('**/Cargo.lock') }}
-
-      - name: Cache Cargo index
-        uses: actions/cache@v4
-        with:
-          path: ~/.cargo/git
-          key: ${{ runner.os }}-cargo-git-${{ hashFiles('**/Cargo.lock') }}
-
-      - name: Cache target directory
-        uses: actions/cache@v4
-        with:
-          path: target
-          key: ${{ runner.os }}-target-build-${{ hashFiles('**/Cargo.lock') }}
+          shared-key: "ci"
+          cache-targets: true
+          cache-on-failure: true
 
       - name: Build workspace
         run: cargo build --release --workspace --verbose
