--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -120,6 +120,16 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v4
 
+      - name: Install Bun
+        uses: oven-sh/setup-bun@v2
+        with:
+          bun-version: latest
+
+      - name: Build dashboard webapp
+        run: |
+          cd webapps/dashboard
+          bun install
+          bun run build
       - name: Download webapp artifacts
         uses: actions/download-artifact@v4
         with:
