Fix release workflow binary build - explicitly specify all three binaries
The release workflow was failing because cargo build --release --target wasn't
building binaries from workspace member crates. Changed to explicitly specify:
- localup (CLI)
- localup-agent-server (Agent server)
- tunnel-exit-node (produces localup-relay binary)

This ensures all three binaries are available for stripping and archiving across
all platforms (Windows, Linux AMD64/ARM64, macOS Intel/ARM).

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -138,7 +138,7 @@ jobs:
           CC_aarch64_unknown_linux_gnu: ${{ matrix.cross == true && 'aarch64-linux-gnu-gcc' || '' }}
           AR_aarch64_unknown_linux_gnu: ${{ matrix.cross == true && 'aarch64-linux-gnu-ar' || '' }}
         run: |
-          cargo build --release --target ${{ matrix.target }}
+          cargo build --release --target ${{ matrix.target }} -p localup -p localup-agent-server -p tunnel-exit-node
 
       # Strip binaries (Unix only)
       - name: Strip binaries (Unix)
