Add build scripts to capture git metadata and build timestamp
- Introduced `build.rs` files in both the root and `localup-agent-server` crates to retrieve and set environment variables for the current git commit hash, git tag, and build timestamp.
- Updated `Cargo.toml` for both crates to include `chrono` as a build dependency.
- Modified the main entry points to display version information, including the git tag, commit hash, and build time in the CLI help output.

--- a/crates/localup-agent-server/Cargo.toml
+++ b/crates/localup-agent-server/Cargo.toml
@@ -30,3 +30,6 @@ thiserror = { workspace = true }
 
 # Network utilities
 ipnet = "2.10"  # CIDR parsing
+
+[build-dependencies]
+chrono = { workspace = true }
