--- a/Cargo.toml
+++ b/Cargo.toml
@@ -46,6 +46,9 @@ tracing = { workspace = true }
 tracing-subscriber = { workspace = true }
 uuid = { workspace = true }
 
+[build-dependencies]
+chrono = { workspace = true }
+
 [workspace.package]
 version = "0.1.0"
 edition = "2021"
