Update dependencies and enhance TLS/SNI support
- Added new dependencies including `axum`, `localup-lib`, `rustls`, and `tokio-rustls` to improve TLS/SNI functionality.
- Introduced example files for `https_relay`, `tcp_relay`, and `tls_relay` to demonstrate usage of the new features.
- Updated `Cargo.toml` and `Cargo.lock` to reflect the changes in dependencies and project structure.
- Enhanced documentation in `CLAUDE.md` and `README.md` to provide clearer guidelines on the new features and examples.
- Implemented SNI routing capabilities in the TLS server, allowing for multiple TLS services on the same port.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -35,15 +35,30 @@ authors.workspace = true
 name = "localup"
 path = "src/main.rs"
 
+[[example]]
+name = "https_relay"
+path = "examples/https_relay.rs"
+
+[[example]]
+name = "tcp_relay"
+path = "examples/tcp_relay.rs"
+
+[[example]]
+name = "tls_relay"
+path = "examples/tls_relay.rs"
 
 [dependencies]
 localup-agent = { path = "crates/localup-agent" }
+localup-lib = { path = "crates/localup-lib" }
 tokio = { workspace = true }
+tokio-rustls = { workspace = true }
 clap = { workspace = true }
 anyhow = { workspace = true }
 tracing = { workspace = true }
 tracing-subscriber = { workspace = true }
 uuid = { workspace = true }
+rustls = { workspace = true }
+axum = { workspace = true }
 
 [build-dependencies]
 chrono = { workspace = true }
