--- a/crates/localup-lib/Cargo.toml
+++ b/crates/localup-lib/Cargo.toml
@@ -24,6 +24,8 @@ tokio = { workspace = true }
 anyhow = { workspace = true }
 thiserror = { workspace = true }
 tracing = { workspace = true }
+rustls = { workspace = true }
+chrono = { workspace = true }
 
 [features]
 default = ["db"]
