Enhance relay configuration with trait-based customization
- Added `relay_config.rs` module to introduce pluggable configuration traits for tunnel storage, domain generation, certificate handling, and port allocation.
- Updated `Cargo.toml` to include `async-trait` dependency for async trait support.
- Modified `lib.rs` to re-export new configuration traits and types for easier access.
- Enhanced `relay.rs` to support customizable implementations for storage, domain provider, certificate provider, and port allocator in relay builders.
- Updated example files (`https_relay.rs`, `tcp_relay.rs`, `tls_relay.rs`) to demonstrate the new customizable relay behavior.
- Added documentation for SNI support in `SNI_SUPPORT.md` to guide users on configuring and utilizing SNI routing capabilities.

--- a/crates/localup-lib/Cargo.toml
+++ b/crates/localup-lib/Cargo.toml
@@ -26,6 +26,7 @@ thiserror = { workspace = true }
 tracing = { workspace = true }
 rustls = { workspace = true }
 chrono = { workspace = true }
+async-trait = { workspace = true }
 
 [features]
 default = ["db"]
