Update domain provider implementation and clean up protocol configuration
- Introduced a new `DomainProvider` trait for customizable subdomain generation and management.
- Added `DomainContext` struct to encapsulate client identity and connection details for domain assignment.
- Updated `TunnelHandler` to support domain provider integration, allowing for sticky and custom subdomain policies.
- Removed `remote_port` from `ProtocolConfig::Tls` and related structures to simplify protocol handling.
- Enhanced tests to validate new domain provider functionality and ensure correct behavior across different configurations.
- Updated `Cargo.toml` to include `async-trait` dependency for async support in domain provider implementations.

--- a/crates/localup-control/Cargo.toml
+++ b/crates/localup-control/Cargo.toml
@@ -15,6 +15,7 @@ tokio = { workspace = true, features = ["sync"] }
 thiserror = { workspace = true }
 tracing = { workspace = true }
 bincode = { workspace = true }
+async-trait = { workspace = true }
 dashmap = "6.1"
 chrono = { workspace = true }
 
