Update Cargo configuration and add CLI E2E test script
- Added multiple new dependencies related to localup components in `Cargo.lock` and `Cargo.toml`.
- Removed the main binary entry from `Cargo.toml` for `localup` and related crates.
- Introduced a new end-to-end test script for the CLI to validate functionality and catch issues early in the CI workflow.
- Updated the CI configuration to include steps for running the new CLI E2E tests after building the project.

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -161,3 +161,41 @@ jobs:
 
       - name: Build workspace
         run: cargo build --release --workspace --verbose
+
+  cli-e2e:
+    name: CLI E2E Tests
+    needs: build
+    runs-on: ubuntu-latest
+
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v4
+
+      - name: Install Rust toolchain
+        uses: dtolnay/rust-toolchain@stable
+        with:
+          toolchain: ${{ env.RUST_VERSION }}
+
+      - name: Cache Rust dependencies
+        uses: Swatinem/rust-cache@v2
+        with:
+          shared-key: "ci"
+          cache-targets: true
+          cache-on-failure: true
+
+      - name: Build binaries in release mode
+        run: cargo build --release --bins --workspace
+
+      - name: Add binaries to PATH
+        run: echo "${{ github.workspace }}/target/release" >> $GITHUB_PATH
+
+      - name: Run CLI E2E tests
+        run: bash .github/scripts/test-cli.sh
+
+      - name: Upload test logs on failure
+        if: failure()
+        uses: actions/upload-artifact@v4
+        with:
+          name: cli-test-logs
+          path: /tmp/test_output.txt
+          retention-days: 7
