Add Docker support and enhance documentation
- Introduced Docker configuration with multi-stage builds in `Dockerfile` and `Dockerfile.prebuilt` for efficient image creation.
- Added `.dockerignore` to exclude unnecessary files from the Docker build context.
- Created `docker-compose.yml` for a complete multi-service setup including relay, web, and agent services with TLS support.
- Updated `README.md` and `DOCKER.md` with comprehensive Docker usage instructions and examples.
- Enhanced CLI with new options for address binding and token generation.
- Improved error handling in server components for better troubleshooting.
- Added end-to-end test script for Docker to validate functionality and ensure reliability in CI workflows.

--- a/crates/localup-cli/Cargo.toml
+++ b/crates/localup-cli/Cargo.toml
@@ -20,6 +20,7 @@ localup-auth = { path = "../localup-auth" }
 localup-control = { path = "../localup-control" }
 localup-server-https = { path = "../localup-server-https" }
 localup-server-tcp = { path = "../localup-server-tcp" }
+localup-server-tcp-proxy = { path = "../localup-server-tcp-proxy" }
 localup-server-tls = { path = "../localup-server-tls" }
 localup-transport = { path = "../localup-transport" }
 localup-transport-quic = { path = "../localup-transport-quic" }
