Enhance TLS server with SNI passthrough routing and improve CLI options
- Updated the TLS server to support SNI-based passthrough routing, allowing for end-to-end encryption without TLS termination.
- Introduced a new `TunnelConnectionManager` for managing tunnel connections and routing based on SNI.
- Enhanced the CLI with clearer options for standalone mode, specifying local ports and addresses.
- Improved error handling and logging in the server components for better troubleshooting.
- Updated documentation to reflect new features and usage examples for SNI routing.

--- a/crates/localup-server-tls/Cargo.toml
+++ b/crates/localup-server-tls/Cargo.toml
@@ -9,6 +9,8 @@ authors.workspace = true
 localup-proto = { path = "../localup-proto" }
 localup-router = { path = "../localup-router" }
 localup-transport = { path = "../localup-transport" }
+localup-transport-quic = { path = "../localup-transport-quic" }
+localup-control = { path = "../localup-control" }
 localup-cert = { path = "../localup-cert" }
 tokio = { workspace = true }
 tokio-rustls = { workspace = true }
