--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -97,11 +97,16 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v4
 
-      - name: Download webapp artifacts
-        uses: actions/download-artifact@v4
+      - name: Install Bun
+        uses: oven-sh/setup-bun@v2
         with:
-          name: webapps-ci
-          path: webapps/
+          bun-version: latest
+
+      - name: Build dashboard webapp
+        run: |
+          cd webapps/dashboard
+          bun install
+          bun run build
 
       - name: Install Rust toolchain
         uses: dtolnay/rust-toolchain@stable
