--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -7,10 +7,13 @@ on:
 
 permissions:
   contents: write # Required for creating releases
+  packages: write # Required for GHCR Docker publishing
 
 env:
   CARGO_TERM_COLOR: always
   RUST_VERSION: "1.90.0" # Pin Rust version for reproducible builds
+  REGISTRY: ghcr.io
+  IMAGE_NAME: ${{ github.repository }}
 
 jobs:
   # Build webapps once and share across all platforms
@@ -302,3 +305,64 @@ jobs:
             release/SHA256SUMS.txt
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+
+  # Build and push Docker image to GHCR
+  docker-publish:
+    name: Publish Docker Image to GHCR
+    needs: create-release
+    runs-on: ubuntu-latest
+
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v4
+
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v3
+
+      - name: Log in to Container Registry
+        uses: docker/login-action@v3
+        with:
+          registry: ${{ env.REGISTRY }}
+          username: ${{ github.actor }}
+          password: ${{ secrets.GITHUB_TOKEN }}
+
+      - name: Extract metadata
+        id: meta
+        uses: docker/metadata-action@v5
+        with:
+          images: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}
+          tags: |
+            type=semver,pattern={{version}}
+            type=semver,pattern={{major}}.{{minor}}
+            type=semver,pattern={{major}}
+            type=sha,prefix=sha-
+            type=raw,value=latest
+
+      - name: Build and push Docker image
+        uses: docker/build-push-action@v5
+        with:
+          context: .
+          file: ./Dockerfile
+          push: true
+          tags: ${{ steps.meta.outputs.tags }}
+          labels: ${{ steps.meta.outputs.labels }}
+          cache-from: type=gha
+          cache-to: type=gha,mode=max
+
+      - name: Test Docker image
+        run: |
+          echo "Testing Docker image..."
+          docker build -f Dockerfile -t localup:test .
+          docker run --rm localup:test --version
+          docker run --rm localup:test --help
+
+      - name: Print image details
+        run: |
+          echo "## Docker Image Published to GHCR ✅"
+          echo ""
+          echo "### Build Metadata"
+          echo "**Images:**"
+          echo "${{ steps.meta.outputs.tags }}"
+          echo ""
+          echo "**Labels:**"
+          echo "${{ steps.meta.outputs.labels }}"
